--- a/namer/step_03/pubspec.yaml
+++ b/namer/step_03/pubspec.yaml
@@ -6,20 +6,20 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.0.1+1
 
 environment:
-  sdk: ^3.5.0-0
+  sdk: '>=2.19.4 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   english_words: ^4.0.0
-  provider: ^6.1.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
